app/scripts/codegen/__fixtures__/valid/courses/demo/course.ts
export default {
  slug: "demo",
  title: "デモコース",
  description: "codegen テスト用のコース",
  lessons: ["demo-01-dom", "demo-02-worker"],
};
