app/scripts/codegen/__fixtures__/invalid-structure/courses/demo/course.ts
export default {
  slug: "demo",
  title: "構造エラー用コース",
  description: "ディレクトリと course.lessons の不整合を起こす教材",
  lessons: ["demo-a", "demo-b", "demo-c"],
};
